--- a/.gitignore
+++ b/.gitignore
@@ -13,9 +13,14 @@ bin/
 gen/
 build/
 
-CloudDemo/build
-CloudDemo/.idea
-CloudDemo/gen
+*/build
+*/.idea
+*/gen
+*/.settings
+
+#CloudDemo/build
+#CloudDemo/.idea
+#CloudDemo/gen
 
 # Local configuration file (sdk path, etc)
 local.properties
