--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,11 @@
             android:theme="@style/StyledIndicators" />
         <activity android:name=".LoadImageDemo" >
         </activity>
+        <activity
+            android:name=".FragmentDemoActivity"
+            android:label="@string/title_activity_fragment_demo"
+            android:theme="@style/AppTheme.NoActionBar" >
+        </activity>
     </application>
 
 </manifest>
