--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,10 @@ android {
         }
     }
 
+    packagingOptions{
+        exclude 'META-INF/LICENSE.txt'
+    }
+
     buildTypes {
         release {
             signingConfig signingConfigs.myConfig
@@ -40,8 +44,10 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile project(':library')
     compile files('libs/universal-image-loader-1.9.5.jar')
+    compile files('libs/commons-codec.jar')
+    compile files('libs/commons-lang3-3.0-beta.jar')
     compile 'com.android.support:appcompat-v7:22.2.1'
     compile 'com.android.support:design:22.2.1'
     compile 'com.android.support:support-v4:22.2.1'
-    compile 'com.android.support:support-v4:23.1.0'
+//    compile 'com.android.support:support-v4:23.1.0'
 }
