获取当前服务器信息（以双色球为例，获取双色球的期数和时间）； 改造AsyncTask继承类

--- a/app/src/main/assets/bean.properties
+++ b/app/src/main/assets/bean.properties
@@ -1,1 +1,2 @@
 UserEngine=com.hong.rise.lottery.engine.impl.UserEngineImpl
+CommonInfoEngine=com.hong.rise.lottery.engine.impl.CommonInfoEngineImpl
