数据库操作框架实现； 一、完成以下问题：     // 问题一：表名获取     // 问题二：将实体中封装的信息设置到数据中     // 问题三：将数据库中信息设置到实体当中     // 问题四：获取实体中对应的主键信息     // 问题五：实体对象的创建 二、数据库框架使用说明 三、数据库版本维护通用方法

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':CloudDemo', ':testmeminfodemo', ':library'
+include ':app', ':CloudDemo', ':testmeminfodemo', ':library', ':dbdemo'
