--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,7 +47,7 @@ repositories{
 
 
 dependencies {
-    compile(name:'VpnUnlimitedSDK', ext:'aar')
+    compile(name: 'VpnUnlimitedSDK', ext: 'aar')
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile project(':library')
@@ -57,5 +57,6 @@ dependencies {
     compile 'com.android.support:appcompat-v7:22.2.1'
     compile 'com.android.support:design:22.2.1'
     compile 'com.android.support:support-v4:22.2.1'
-//    compile 'com.android.support:support-v4:23.1.0'
+    //    compile 'com.android.support:support-v4:23.1.0'
+    compile files('libs/volley.jar')
 }
