--- a/studyandroid/src/main/AndroidManifest.xml
+++ b/studyandroid/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
         <activity android:name=".StudyActivity" />
         <activity android:name=".TransferActivityA" />
         <activity android:name=".ActivityB" />
+        <activity android:name=".LifeCycle" />
     </application>
 
 </manifest>
