--- a/testAndroid/src/main/AndroidManifest.xml
+++ b/testAndroid/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="com.hong.dbdemo"
-          xmlns:android="http://schemas.android.com/apk/res/android">
-
+<manifest
+    package="com.hong"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <application
         android:allowBackup="true"
@@ -9,8 +9,6 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
-
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -18,11 +16,18 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity
+            android:name="com.hong.MemoryLeakDemoActivity"
+            android:windowSoftInputMode="stateAlwaysHidden|adjustResize"/>
 
+        <activity
+            android:name="com.hong.TestServiceActivity"
+            />
+        <activity
+            android:name="com.hong.TestRemoteServiceActivity"
+            />
 
-
-
+        <service android:name=".service.LocalServcie"/>
     </application>
-
 
 </manifest>
