--- a/studyandroid/src/main/AndroidManifest.xml
+++ b/studyandroid/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
         <activity android:name=".TransferActivityA" />
         <activity android:name=".ActivityB" />
         <activity android:name=".LifeCycle" />
+        <activity android:name=".HandlerDemoActivity" />
 
         <receiver android:name="com.hong.broadcast.CommonBroadcastReceiver">
             <intent-filter>
