--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':CloudDemo', ':library', ':dbdemo', ':volley', ':studyandroid'
+include ':app', ':CloudDemo', ':library', ':dbdemo', ':java_test', ':volley', ':studyandroid'
