--- a/studyandroid/build.gradle
+++ b/studyandroid/build.gradle
@@ -20,6 +20,9 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:24.0.0-alpha2'
+    //    compile project(':volley')
+    compile files('libs/gson-2.3.1.jar')
+    compile files('libs/volley.jar')
 }
