--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.VIBRATE"/>
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
 
     <application
         android:name=".MyApplication"
@@ -50,6 +51,7 @@
         </activity>
         <activity android:name=".NotificationDemoActivity"/>
         <activity android:name=".SdSizeActivity" />
+        <activity android:name=".BaseRecorderActivity" />
     </application>
 
 </manifest>
