音频可视化demo，但是横竖屏切换有bug

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,6 +52,7 @@
         <activity android:name=".NotificationDemoActivity"/>
         <activity android:name=".SdSizeActivity" />
         <activity android:name=".BaseRecorderActivity" />
+        <activity android:name=".VisualizerDemoActivity" />
     </application>
 
 </manifest>
