--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -56,6 +56,7 @@
         <activity
             android:name=".PerfectWaveDemoActivity"
             android:theme="@style/AppTheme"/>
+        <activity android:name=".GetVolumeDemoActivity"/>
     </application>
 
 </manifest>
