--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,17 @@ android {
     compileSdkVersion 22
     buildToolsVersion "23.0.1"
 
+//    sourceSets {
+//        main {
+//            jni.srcDirs = []
+//        }
+//    }
+
+    sourceSets.main {
+        jni.srcDirs = [] // This prevents the auto generation of Android.mk
+        jniLibs.srcDir 'src/main/libs' // This is not necessary unless you have precompiled libraries in your project.
+    }
+
     defaultConfig {
         applicationId "com.hong.rise"
         minSdkVersion 14
@@ -26,7 +37,7 @@ android {
         }
     }
 
-    packagingOptions{
+    packagingOptions {
         exclude 'META-INF/LICENSE.txt'
     }
 
@@ -39,8 +50,8 @@ android {
     }
 }
 
-repositories{
-    flatDir{
+repositories {
+    flatDir {
         dirs 'libs'
     }
 }
