mp3Recorder demo

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -60,6 +60,7 @@
         <activity
             android:name=".JniDemoActivity"
             android:screenOrientation="landscape" />
+        <activity android:name=".Mp3RecorderDemoActivity" />
     </application>
 
 </manifest>
