--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,4 +70,5 @@ dependencies {
     compile 'com.android.support:support-v4:22.2.1'
     //    compile 'com.android.support:support-v4:23.1.0'
     compile files('libs/volley.jar')
+    compile project(path: ':mp3recordlibrary')
 }
