--- a/mp3recordlibrary/build.gradle
+++ b/mp3recordlibrary/build.gradle
@@ -1,13 +1,18 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.3"
+    compileSdkVersion 22
+    buildToolsVersion "23.0.1"
 
-    sourceSets {
-        main {
-            jni.srcDirs = []
-        }
+//    sourceSets {
+//        main {
+//            jni.srcDirs = []
+//        }
+//    }
+
+    sourceSets.main {
+        jni.srcDirs = [] // This prevents the auto generation of Android.mk
+        jniLibs.srcDir 'src/main/libs' // This is not necessary unless you have precompiled libraries in your project.
     }
 
     defaultConfig {
@@ -27,5 +32,5 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.4.0'
+    compile 'com.android.support:appcompat-v7:22.2.1'
 }
